some spacing fixes on cards

--- a/css/project-card.css
+++ b/css/project-card.css
@@ -1,11 +1,12 @@
 .project-left {
-  height: 70vh;
+  height: 45vh;
   width: 45vw;
   background: var(--offwhite);
   border-radius: 4px;
   padding: 3vh;
   margin-right: 64px;
   box-shadow: var(--bshad);
+  position: relative;
 }
 
 .project-left i {
@@ -14,54 +15,52 @@
 }
 
 .project-right {
-  /*height: 70vh;*/
-  /*width: 25vw;*/
-  /*background: var(--tan);*/
-  border-radius: 4px;
+  height: 45vh;
   padding: 3vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  /*box-shadow: var(--shad);*/
 }
 
 #split {
   height: 60vh;
-  border-radius: 4px;
-  box-shadow: var(--shad);
   margin-right: 8px;
 }
 
-#chef {
-  width: 35vw;
-  margin-bottom: 8px;
-  border-radius: 4px;
+#chef-b {
+  width: 40vw;
 }
 
 .button {
   width: 80px;
   height: 30px;
   border-radius: 4px;
-  border: 1px solid var(--grn1);
+  border: 1px solid var(--dblue);
+  box-shadow: 4px 4px 0 var(--red);
   display: flex;
   justify-content: center;
   align-items: center;
   margin-left: 16px;
+  transform: translateY(8px);
 }
 
 .project-link {
-  color: var(--grn1);
+  color: var(--dblue);
   text-decoration: none;
   font-family: var(--text);
 }
 
 .project-tech {
   display: flex;
+  justify-content: flex-end;
+  position: absolute;
+  bottom: 16px;
 }
 
 .project-tech i {
   margin-right: 8px;
+  margin-top: 8px;
 }
 
 #chef-img {
@@ -71,4 +70,12 @@
 
 #split-img {
   display: flex;
+}
+
+.project-left p {
+  margin-bottom: 8px;
+}
+
+.project-left h2 {
+  margin-bottom: 16px;
 }
