--- a/css/tech-card.css
+++ b/css/tech-card.css
@@ -20,3 +20,7 @@
   text-shadow: none;
 }
 
+#tech-line {
+  margin-bottom: 0;
+}
+
